--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -20,6 +20,7 @@
     data: client,
     history: history,
     pagination: pagination,
+    timelineItems: timelineItems,
     tabs: [
       {
         id: "client_details",
