--- a/views/components/tabComponent.njk
+++ b/views/components/tabComponent.njk
@@ -92,6 +92,7 @@
           {% set history = options.history %} 
           {% set sortOrder = options.sortOrder %}
           {% set pagination = options.pagination %}
+          {% set timelineItems = options.timelineItems %}
           {% set caseType = options.caseType %} 
           {% if tab.partial %}
             {% include tab.partial %}
