If applied, this adds caseDetailsHeaderComponent to `remove` pages

--- a/views/case_details/confirm-remove-third-party.njk
+++ b/views/case_details/confirm-remove-third-party.njk
@@ -1,10 +1,10 @@
-{% extends "base.njk" %}
+{% extends "case_details/_base-case-change.njk" %}
 {% from "components/confirmationComponent.njk" import confirmationComponent %}
 
 {% block pageTitle %}{{ t('pages.caseDetails.removeThirdParty.pageTitle', { serviceName: config.SERVICE_NAME }) }}
 {% endblock %}
 
-{% block pageContent %}
+{% block formContent %}
   {{ confirmationComponent({
     heading: t('pages.caseDetails.removeThirdParty.heading'),
     description: t('pages.caseDetails.removeThirdParty.description'),
