EL-2809: View case history (#409)
* EL-2809: View case history

If applied:
- this adds a partial to the history tab
- adds more specific details to the history tab test and an MSW handler
- updates the outcome descriptions
- resolves linting error and creates re-usable function for getting pagination data
- doesn't show notes for when code is "MT_CHANGED" or "MT_CREATED"
- populates the mojTimeline based on the api call
- updates the nunjucks setup
- puts API call to fetch client details into middleware so, that it can be accessed in the request object
- It also moves the logic to transform pagination meta from template  to controller
- updates the tests

--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -18,6 +18,9 @@
     activeTab: activeTab,
     containerId: "cases-tab-container",
     data: client,
+    history: history,
+    pagination: pagination,
+    timelineItems: timelineItems,
     tabs: [
       {
         id: "client_details",
@@ -38,7 +41,8 @@
       {
         id: "history",
         text: t('pages.caseDetails.tabs.history'),
-        href:"/cases/" + caseReference + "/history"
+        href:"/cases/" + caseReference + "/history",
+        partial: "case_details/_history-partial.njk"
       }
     ]
   }) }}
