--- a/docs/source/documentation/testing.html.md.erb
+++ b/docs/source/documentation/testing.html.md.erb
@@ -85,6 +85,9 @@ yarn playwright test --config=tests/playwright/playwright.config.ts tests/playwr
 
 # Run in UI mode with Playwright Test Explorer
 yarn playwright test --config=tests/playwright/playwright.config.ts --ui
+
+# Run in Playwright UI
+npx playwright test --ui -c tests/playwright/playwright.config.ts
 ```
 
 #### Configuration
