if applied, updates the documentation to include pre-commit

--- a/docs/source/documentation/getting-started.html.md.erb
+++ b/docs/source/documentation/getting-started.html.md.erb
@@ -85,6 +85,29 @@ You may have to tell your local machine to use the latest version of node alread
 nvm install node
 ```
 
+## Pre-commit hooks
+
+Ensure prek is installed globally
+
+Linux / MacOS
+
+```
+curl --proto '=https' --tlsv1.2 \
+-LsSf https://raw.githubusercontent.com/ministryofjustice/devsecops-hooks/e85ca6127808ef407bc1e8ff21efed0bbd32bb1a/prek/prek-installer.sh | sh
+```
+Activate
+
+Execute the following command in the repository directory
+
+```
+prek install
+```
+Test
+
+```
+prek run
+```
+
 #### Running locally with docker
 
 Prerequisites, Docker Desktop
@@ -122,4 +145,3 @@ This template uses the built-in Express JS routing.
 A route is a section of Express code that associates an HTTP verb (`GET`, `POST`, `PUT`, `DELETE`, etc.), with a URL path/pattern, and a function that is called to handle that pattern.
 
 [You can find further documentation here](https://expressjs.com/en/guide/routing.html).
-
