--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -70,7 +70,17 @@
       classes: 'govuk-visually-hidden'
     }
   ] %}
-{% elif currentStatus in["closed", "completed"] %}
+{% elif currentStatus == "closed" %}
+  {% set menuItems = [
+    {
+      text: t('pages.caseDetails.buttons.actions.advising'),
+      href: "/cases/" + client.caseReference + "/why-advising"
+    }, {
+      text: '',
+      classes: 'govuk-visually-hidden'
+    }
+  ] %}
+{% elif currentStatus == "completed" %}
   {% set menuItems = [
     {
       text: t('pages.caseDetails.buttons.actions.advising'),
