--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -84,7 +84,7 @@
   {% set menuItems = [
     {
       text: t('pages.caseDetails.buttons.actions.advising'),
-      href: "/cases/" + client.caseReference + "/why-reopen"
+      href: "/cases/" + client.caseReference + "/why-reopen-completed-case"
     }, {
       text: '',
       classes: 'govuk-visually-hidden'
