If applied, this updates the url and partial that is used by the `why-reopen-closed-case`. It also tries to keep things DRY.

--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -74,7 +74,7 @@
   {% set menuItems = [
     {
       text: t('pages.caseDetails.buttons.actions.advising'),
-      href: "/cases/" + client.caseReference + "/why-advising"
+      href: "/cases/" + client.caseReference + "/why-reopen-closed-case"
     }, {
       text: '',
       classes: 'govuk-visually-hidden'
