EL-2854: Move 'closed' cases to 'advising' (#462)
* If applied:
- this adds the page, route and controllers for moving case form closed to advising
- updates the test & adds test data
- tidies mock data and updates coverage percentage threshold
- updates the route url for reopening case to `why-reopen-completed-case`
- updates the url and partial that is used by the `why-reopen-closed-case`. It also tries to keep things DRY.

--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -70,11 +70,21 @@
       classes: 'govuk-visually-hidden'
     }
   ] %}
-{% elif currentStatus in["closed", "completed"] %}
+{% elif currentStatus == "closed" %}
   {% set menuItems = [
     {
       text: t('pages.caseDetails.buttons.actions.advising'),
-      href: "/cases/" + client.caseReference + "/why-reopen"
+      href: "/cases/" + client.caseReference + "/why-reopen-closed-case"
+    }, {
+      text: '',
+      classes: 'govuk-visually-hidden'
+    }
+  ] %}
+{% elif currentStatus == "completed" %}
+  {% set menuItems = [
+    {
+      text: t('pages.caseDetails.buttons.actions.advising'),
+      href: "/cases/" + client.caseReference + "/why-reopen-completed-case"
     }, {
       text: '',
       classes: 'govuk-visually-hidden'
