if applied, updates the search description to include laa reference

--- a/views/search/index.njk
+++ b/views/search/index.njk
@@ -31,6 +31,7 @@
         <li>{{ t('pages.search.searchHint.items.name') }}</li>
         <li>{{ t('pages.search.searchHint.items.postcode') }}</li>
         <li>{{ t('pages.search.searchHint.items.address') }}</li>
+        <li>{{ t('pages.search.searchHint.items.laaReference') }}</li>
       </ul>
     </div>
     <form action="/search" method="POST" class="govuk-form" autocomplete="off">
