If applied, this: - updates the client details tab controller - adds controller for case details tab - creates new partial for case details tab - updates the translation file

--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -31,7 +31,8 @@
       {
         id: "case_details",
         text: t('pages.caseDetails.tabs.caseDetails'),
-        href: "/cases/" + caseReference + "/case-details"
+        href: "/cases/" + caseReference + "/case-details",
+        partial: "case_details/_case-details-partial.njk"
       },
       {
         id: "financial_eligibility",
