--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,3 +8,4 @@
 @use "components/sortable-table";
 @use "components/search";
 @use "components/case_details_header";
+@use "components/case_details_tab"
