Adds the ability to submit provider notes

--- a/views/case_details/index.njk
+++ b/views/case_details/index.njk
@@ -21,6 +21,12 @@
     history: history,
     pagination: pagination,
     timelineItems: timelineItems,
+    csrfToken: csrfToken,
+    maxProviderNoteLength: maxProviderNoteLength,
+    characterThreshold: characterThreshold,
+    currentProviderNote: currentProviderNote,
+    caseReference: caseReference,
+    error: error,
     tabs: [
       {
         id: "client_details",
