--- a/views/case_details/_case-details-partial.njk
+++ b/views/case_details/_case-details-partial.njk
@@ -6,7 +6,15 @@
   <h2 class="govuk-heading-m">{{ t('pages.caseDetails.tabs.caseDetails') }}</h2>
   <a class="govuk-body govuk-link" href="#providerNote">{{ t('pages.caseDetails.caseDetailsSection.noteLabel') }}</a>
 </span>
-
+{% if error %}
+        {{ errorSummary(error.errorSummaryList) }}
+        {% set errorMessages = {
+          providerNote: {
+            text: error.inputErrors.providerNote
+          }
+          if error.inputErrors.providerNote
+        } %}
+      {% endif %}
 {# Client problem section #}
 {% if data.scopeTraversal %}
   <h3 class="govuk-heading-s">{{ t('pages.caseDetails.caseDetailsSection.clientProblemTitle') }}</h3>
@@ -69,12 +77,15 @@
 
 
 {# Providers notes section #}
-{% if data.notesHistory.providerNotes %}
-  <h3 class="govuk-heading-s">{{ t('pages.caseDetails.caseDetailsSection.providerNotesTitle') }}</h3>
-  <p class="govuk-hint">{{ data.notesHistory.createdBy }} on {{ data.notesHistory.created }}</p>
-  <p class="govuk-body">{{ data.notesHistory.providerNotes }}</p>
+<h3 class="govuk-heading-s">{{ t('pages.caseDetails.caseDetailsSection.providerNotesTitle') }}</h3>
+{% if data.notesHistory and data.notesHistory.length > 0 %}
+  {% for note in data.notesHistory %}
+    <div class="govuk-!-margin-bottom-4">
+      <p class="govuk-hint">{{ note.createdBy }} on {{ note.created }}</p>
+      <p class="govuk-body">{{ note.providerNotes }}</p>
+    </div>
+  {% endfor %}
 {% else %}
-  <h3 class="govuk-heading-s">{{ t('pages.caseDetails.caseDetailsSection.providerNotesTitle') }}</h3>
   <p class="govuk-body">{{ t('pages.caseDetails.caseDetailsSection.noNotes') }}</p>
 {% endif %}
 
@@ -82,15 +93,6 @@
 {% block formContent %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      {% if error %}
-        {{ errorSummary(error.errorSummaryList) }}
-        {% set errorMessages = {
-          providerNote: {
-            text: error.inputErrors.providerNote
-          }
-          if error.inputErrors.providerNote
-        } %}
-      {% endif %}
 
       <h3 class="govuk-heading-s govuk-!-margin-top-5">{{ t('pages.caseDetails.caseDetailsSection.noteLabel') }}</h3>
 
