EL-2924: Add provider note (#506)
* If applied, this:
- updates the client details tab controller
- adds controller for case details tab
- creates new partial for case details tab
- updates the translation file

* If applied, this adds in the `client problem` section

* If applied, this adds in `operator diagnosis` & `operator notes`

* If applied, this add in the Providers notes section

* If applied, this adds padding to the page as per the design

* If applied, this updates tests

This changes:
- adds the base unit file
- updates & adds in the controller unit tests
- updates test data and mock api call and transformation
- adds context to one of the tests

* If applied, this updates based on review comments

* If applied, this updates functions based on review comments

* Adds the ability to submit provider notes

* Adds playwright tests

* Adds unit test

* If applied, this shows multiple answers when added in scope traversal.

* If applied, this get's the correct client notes & operator notes

* If applied, this works with the array of notesHistory

* Updates list showing logic after merge

* Adds test back into the playwright

---------

Co-authored-by: Masum Khan <masum.khan@digital.justice.gov.uk>

--- a/views/components/tabComponent.njk
+++ b/views/components/tabComponent.njk
@@ -96,7 +96,13 @@
           {% set sortOrder = options.sortOrder %}
           {% set pagination = options.pagination %}
           {% set timelineItems = options.timelineItems %}
-          {% set caseType = options.caseType %} 
+          {% set caseType = options.caseType %}
+          {% set csrfToken = options.csrfToken %}
+          {% set maxProviderNoteLength = options.maxProviderNoteLength %}
+          {% set characterThreshold = options.characterThreshold %}
+          {% set currentProviderNote = options.currentProviderNote %}
+          {% set caseReference = options.caseReference %}
+          {% set error = options.error %}
           {% if tab.partial %}
             {% include tab.partial %}
           {% elif tab.content %}
