--- a/views/case_details/_case-details-partial.njk
+++ b/views/case_details/_case-details-partial.njk
@@ -6,7 +6,15 @@
   <h2 class="govuk-heading-m">{{ t('pages.caseDetails.tabs.caseDetails') }}</h2>
   <a class="govuk-body govuk-link" href="#providerNote">{{ t('pages.caseDetails.caseDetailsSection.noteLabel') }}</a>
 </span>
-
+{% if error %}
+        {{ errorSummary(error.errorSummaryList) }}
+        {% set errorMessages = {
+          providerNote: {
+            text: error.inputErrors.providerNote
+          }
+          if error.inputErrors.providerNote
+        } %}
+      {% endif %}
 {# Client problem section #}
 {% if data.scopeTraversal or data.client_notes %}
   <h3 class="govuk-heading-s">{{ t('pages.caseDetails.caseDetailsSection.clientProblemTitle') }}</h3>
@@ -16,15 +24,15 @@
   {% endif %}
 
   <ul class="govuk-list govuk-list--bullet">
-    {% if data.scopeTraversal.category %}
+    {% if data.scopeTraversal and data.scopeTraversal.category %}
       <li>{{ t('pages.caseDetails.caseDetailsSection.category') }} {{ data.scopeTraversal.category }}</li>
     {% endif %}
 
-    {% if data.scopeTraversal.subCategory %}
+    {% if data.scopeTraversal and data.scopeTraversal.subCategory %}
       <li>{{ t('pages.caseDetails.caseDetailsSection.subCategory') }} {{ data.scopeTraversal.subCategory }}</li>
     {% endif %}
 
-    {% if data.scopeTraversal.onwardQuestion %}
+    {% if data.scopeTraversal and data.scopeTraversal.onwardQuestion %}
       {% for qa in data.scopeTraversal.onwardQuestion %}
         <li>{{ qa.question }} {{ qa.answer }}</li>
       {% endfor %}
@@ -34,7 +42,7 @@
       <li>{{ t('pages.caseDetails.caseDetailsSection.tellUsMore') }} {{ data.client_notes }}</li>
     {% endif %}
 
-    {% if data.scopeTraversal.financialAssessmentStatus %}
+    {% if data.scopeTraversal and data.scopeTraversal.financialAssessmentStatus %}
       <li>{{ t('pages.caseDetails.caseDetailsSection.financialAssessmentStatus') }} {{ data.scopeTraversal.financialAssessmentStatus }}</li>
     {% endif %}
   </ul>
@@ -87,15 +95,6 @@
 {% block formContent %}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      {% if error %}
-        {{ errorSummary(error.errorSummaryList) }}
-        {% set errorMessages = {
-          providerNote: {
-            text: error.inputErrors.providerNote
-          }
-          if error.inputErrors.providerNote
-        } %}
-      {% endif %}
 
       <h3 class="govuk-heading-s govuk-!-margin-top-5">{{ t('pages.caseDetails.caseDetailsSection.noteLabel') }}</h3>
 
