If applied, this updates and adds in tests

--- a/views/case_details/do-you-want-to-give-feedback.njk
+++ b/views/case_details/do-you-want-to-give-feedback.njk
@@ -24,6 +24,7 @@
         <input type="hidden" name="_csrf" value="{{ csrfToken }}"/>
 
         {{ govukRadios({
+          id: "doYouWantToGiveFeedback",
           name: "doYouWantToGiveFeedback",
           errorMessage: errorState.fieldErrors.doYouWantToGiveFeedback if errorState.fieldErrors.doYouWantToGiveFeedback,
           fieldset: {
