If applied, this: - updates case header - conditionally shows client support needs card when `minicom` is true - updates test suite to look for correct header via CSS

--- a/src/scss/components/_case_details_header.scss
+++ b/src/scss/components/_case_details_header.scss
@@ -12,17 +12,8 @@
 }
 
 .case-status-wrapper {
-  display: flex;
   align-items: center;
-}
-
-.pipe{
-  border-left: 2px solid #0b0c0c;
-  height: 40px;
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: 14px;
-  margin-right: 14px;
+  margin-bottom: 0;
 }
 
 .tag-padding{
