--- a/views/case_details/_client-details-partial.njk
+++ b/views/case_details/_client-details-partial.njk
@@ -184,7 +184,7 @@
   ]
 }) }}
 
-{% if (not data.clientSupportNeeds.no_adaptations_required or data.clientSupportNeeds.notes or data.clientSupportNeeds.languageSupportNeeds) and not data.clientSupportNeeds.skype %}
+{% if (not data.clientSupportNeeds.no_adaptations_required or data.clientSupportNeeds.notes or data.clientSupportNeeds.languageSupportNeeds) and (not data.clientSupportNeeds.skype and not data.clientSupportNeeds.minicom) %}
   {# Client support needs summary card #}
   {{ summaryCardComponent({
     data: constructedData,
