If applied, this updates to use translation file

--- a/views/case_details/_case-info-partial.njk
+++ b/views/case_details/_case-info-partial.njk
@@ -102,7 +102,7 @@
   {# Urgent case #}
   {% if client.is_urgent === 'true' %} 
     {{ mojBadge({
-      text: "Vulnerable",
+      text: t('pages.caseDetails.vulnerable'),
       classes: "moj-badge--red govuk-!-margin-bottom-3"
     }) }}
   {% endif %}
